# cpp_service

./: .gitignore  CMakeLists.txt  README.md  current_vad_output.txt  current_vad_output_v2.txt  docker-compose.yml  test_long.pcm
.trae/skills/cpp-vad-service/: SKILL.md
dockerfiles/: Dockerfile.base  Dockerfile.v1
include/: base64.h  safe_queue.h  server.h  session.h  sherpa_vad_detector.h  vad_engine.h  vad_iterator.h
src/: main.cpp  server.cpp  session.cpp  sherpa_vad_detector.cpp  test_vad.cpp  vad_iterator.cpp
test/: test.pcm  test_client.py  test_long.pcm  vad.go
test/test_case/: README.md  report.txt  test_script.py
